modificacao de pokemon.html

--- a/src/app/pokemon/pokemon.html
+++ b/src/app/pokemon/pokemon.html
@@ -2,3 +2,8 @@
 <img src="">
 <p>Altura:</p>
 <p>Peso:</p>
+<form>
+    <label>Nome: </label>
+    <input type="text" name="poke-name">
+    <button>Pesquisar</button>
+</form>
