pokemon.html att

--- a/src/app/pokemon/pokemon.html
+++ b/src/app/pokemon/pokemon.html
@@ -1,7 +1,9 @@
 <h1>Nome</h1>
 <img src="">
+<p>Numero:</p>
 <p>Altura:</p>
 <p>Peso:</p>
+<p>Tipo:</p>
 <form>
     <label>Nome: </label>
     <input type="text" name="poke-name">
