--- a/src/app/pokemon/pokemon.html
+++ b/src/app/pokemon/pokemon.html
@@ -4,6 +4,10 @@
 <p>Altura:</p>
 <p>Peso:</p>
 <p>Tipo:</p>
+<p>Habilidades:</p>
+<P>Vida:</P>
+<p>Ataque:</p>
+<P>Defesa:</P>
 <form>
     <label>Nome: </label>
     <input type="text" name="poke-name">
